[package]
name        = "nodeshift-core"
version     = "0.1.0"
edition     = "2021"
description = "NodeShift VPN — protocol core in Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio        = { version = "1",    features = ["full"] }
bytes        = "1"
uuid         = { version = "1",    features = ["v4"] }
hex          = "0.4"
base64       = "0.22"
rand         = "0.8"
sha2         = "0.10"
hmac         = "0.12"
hkdf         = "0.12"
aead         = "0.5"
chacha20poly1305 = "0.10"
x25519-dalek = "2"
thiserror    = "1"
tracing      = "0.1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
